fixed the description box so that is doesnt get too small and the visuals are messed up, still need to fix the edit box to auto stretch its size in comparison to the description box.

--- a/src/Cards/SScards.module.css
+++ b/src/Cards/SScards.module.css
@@ -15,6 +15,7 @@
 }
 
 .editButton{
+    margin-top: 7px;
     margin-bottom: 7px;
     width: 70px;
     min-height: 86px;
@@ -56,7 +57,7 @@
     resize: vertical;
     max-height: 180px;
     overflow-y: auto;
-    
+    min-height: 80px;
 }
 
 .checkBox{
